 - Add abs() to GenericVector interface
 - Fix bug for local refinement of manifolds
 - Interface change: VariationalProblem now takes: a, L or F, (dF)
 - Map linear algebra objects to processes consistently with mesh parition
 - Lots of improvemenst to parallel assembly, dof maps and linear algebra
 - Add lists supported_elements and supported_elements_for_plotting in Python
 - Add script dolfin-plot for plotting meshes and elements from the command-line
 - Add support for plotting elements from Python
 - Add experimental OpenMP assembler
 - Thread-safe fixed in Function class
 - Make GenericFunction::eval thread-safe (Data class removed)
 - Optimize and speedup topology computation (mesh.init())
 - Add function Mesh::clean() for cleaning out auxilliary topology data
 - Improve speed and accuracy of timers
 - Fix bug in 3D uniform mesh refinement
 - Add built-in meshes UnitTriangle and UnitTetrahedron
 - Only create output directories when they don't exist
 - Make it impossible to set the linear algebra backend to something illegal
 - Overload value_shape instead of dim for userdefined Python Expressions
 - Permit unset parameters
 - Search only for BLAS library (not cblas.h)
0.9.9 [2010-09-01]
 - Change build system to CMake
 - Add named MeshFunctions: VertexFunction, EdgeFunction, FaceFunction, FacetFunction, CellFunction
 - Allow setting constant boundary conditions directly without using Constant
 - Allow setting boundary conditions based on string ("x[0] == 0.0")
 - Create missing directories if specified as part of file names
 - Allow re-use of preconditioners for most backends
 - Fixes for UMFPACK solver on some 32 bit machines
 - Provide access to more Hypre preconditioners via PETSc
 - Updates for SLEPc 3.1
 - Improve and implement re-use of LU factorizations for all backends
 - Fix bug in refinement of MeshFunctions
0.9.8 [2010-07-01]
 - Optimize and improve StabilityAnalysis.
 - Use own implementation of binary search in ODESolution (takes advantage of