@@ -2,7 +2,7 @@
 // Licensed under the GNU LGPL Version 2.1.
 //
 // First added:  2008-03-11
-// Last changed: 2010-01-27
+// Last changed: 2011-01-19
 //
 // Demonstrating function evaluation at arbitrary points.
 
@@ -33,9 +33,7 @@ int main()
 
   // Create mesh and a point in the mesh
   UnitCube mesh(8, 8, 8);
-  //std::vector<double> x = boost::assign::list_of(0.31)(0.32)(0.33);
-  double _x[3] = {0.31, 0.32, 0.33};
-  Array<double> x(3, _x);
+  Point x(0.31, 0.32, 0.33);
 
   // A user-defined function
   F f;
@@ -50,15 +48,10 @@ int main()
   pde.solve(g);
 
   // Evaluate user-defined function f
-  //double value = 0.0;
-  Array<double> value(1);
-  value[0] = 0.0;
-  f.eval(value, x);
-  info("f(x) = %g", value[0]);
+  info("f(x) = %g", f(x));
 
   // Evaluate discrete function g (projection of f)
-  g.eval(value, x);
-  info("g(x) = %g", value[0]);
+  info("g(x) = %g", g(x));
 }
 
 #else
