@@ -1,3 +1,4 @@
+ - Add operator () for evaluation at points for Function/Expression in C++
  - Add abs() to GenericVector interface
  - Fix bug for local refinement of manifolds
  - Interface change: VariationalProblem now takes: a, L or F, (dF)
